# Competitive-Intel-Copilot

./: .env.example  .gitignore  README.md  pyproject.toml
config/: competitors.yaml
src/competitive_intel/: cli.py  config.py  diff.py  report.py  storage.py  synthesize.py
src/competitive_intel/collectors/: scraper.py  search.py
tests/: test_diff.py
